@@ -36,7 +36,7 @@
 		    <td>A simple sample page, with common elements.</td>
 		    <td>Olav Bj&oslash;rk&oslash;y (olav at bjorkoy dot com)</td>
 		  </tr>
-		  <tr>
+		  <tr class="even">
 		    <td><a href="grid.html">Grid</a></td>
 		    <td>Tests classes provided by grid.css.</td>
 		    <td>Olav Bj&oslash;rk&oslash;y (olav at bjorkoy dot com)</td>
@@ -46,7 +46,7 @@
 		    <td>Tests HTML elements which gets reset in reset.css.</td>
 		    <td>Olav Bj&oslash;rk&oslash;y (olav at bjorkoy dot com)</td>
 		  </tr>
-		  <tr>
+		  <tr class="even">
 		    <td><a href="forms.html">Forms</a></td>
 		    <td>Tests classes and default look provided by forms.css.</td>
 		    <td>Kim Joar Bekkelund (kjbekkelund at gmail dot com)</td>
