@@ -10,6 +10,7 @@ Version 0.x - Date TBD
 --
   New features:
     * Higher compression rate. [OFB]
+    * Alternating table row colors. [OFB]
     * 
   
   Bug fixes:
